--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container" id="header">
         <nav class="navbar navbar-expand-md navbar-light bg-white">        
           <a class="navbar-brand" href="#">
-            <img src="img/plantage_black.png" class="img-fluid mt-3 mb-2 mr-5 ml-2">
+            <img src="lp2023/img/plantage_black.png" class="img-fluid mt-3 mb-2 mr-5 ml-2">
           </a>
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
               <span class="navbar-toggler-icon"></span>
