--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="d-flex justify-content-center">
         <div class="row">
           <div class="col-sm-12 col-md-12 mt-4">
-            <img src="img/LP header.png" class="card-img">
+            <img src="https://github.com/yharuko/lp2023/blob/main/LP_header.png?raw=true" class="card-img">
           </div>
         </div>
     </div>
