--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <title>PLANTAGE | プランタージュ</title>
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="https://raw.githubusercontent.com/yharuko/lp2023/main/favicon.ico">
   <!-- 必要なメタタグ -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
