--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="d-flex justify-content-center">
     <div class="row">
       <div class="col-sm-12 col-md-12">
-      <img class="card-img" src="img/kodawari.png" alt="プランタージュのこだわり">
+      <img class="card-img" src="https://github.com/yharuko/lp2023/blob/main/kodawari.png?raw=true" alt="プランタージュのこだわり">
       </div>
     </div>
   </div>
