--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
   </div>
   <div class="col-sm-6 col-md-6 pb-5">
-    <img class="card-img" src="img/voice.png" alt="customerimage">
+    <img class="card-img" src="https://github.com/yharuko/lp2023/blob/main/voice.png?raw=true" alt="customerimage">
   </div>
   </div>
 </div>
