--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <p><a href="https://plantage-shop.com/collections/herbal-tea" target="_blank" class="btn btn-outline-success">ハーブティーはこちら</a></p>
     </div>  
     <div class="col-sm-12 col-md-8">
-      <img src="img/colorfulteapots.jpg" class="img-fluid">
+      <img src="https://github.com/yharuko/lp2023/blob/main/colorfulteapots.jpg?raw=true" class="img-fluid">
     </div>
   </div>
 </div>
