--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <div class="container about d-flex justify-content-center mt-5 mb-5 pt-2 pb-2">
   <div class="row">
       <div class="col-sm-12 col-md-8">
-        <img src="img/yakuzentea1_s.jpg" class="img-fluid">
+        <img src="https://github.com/yharuko/lp2023/blob/main/yakuzentea1_s.jpg?raw=true" class="img-fluid">
     </div>
     <div class="col-sm-12 col-md-4 mt-2">
       <a id="yakuzenteatitle"><b>薬膳茶を楽しむ<i class="fab fa-pagelines fa-fw"></i></b></a>
