--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <p><a href="https://plantage-shop.com/collections/yakuzen-ingredients" target="_blank" class="btn btn-outline-success">薬膳食材はこちら</a></p>
     </div>
     <div class="col-sm-12 col-md-8">
-      <img src="img/yakuzensyokuzai_s.jpg" class="img-fluid">
+      <img src="https://github.com/yharuko/lp2023/blob/main/yakuzensyokuzai_s.jpg?raw=true" class="img-fluid">
     </div>
   </div>  
 </div>
