--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         より関心が高まっています。</p>
       </div>
     <div class="col-sm-12 col-md-8">
-    <img src="img/oriental1.jpg" class="img-fluid">
+    <img src="https://github.com/yharuko/lp2023/blob/main/oriental1.jpg?raw=true" class="img-fluid">
     </div>
   </div>
 </div>
