--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 <div class="container about d-flex justify-content-center mt-5 mb-5 pt-3 pb-3">
   <div class="row">
     <div class="col-sm-12 col-md-8">
-      <img src="img/yoga1.jpg" class="img-fluid">
+      <img src="https://github.com/yharuko/lp2023/blob/main/yoga1.jpg?raw=true" class="img-fluid">
     </div>
     <div class="col-sm-12 col-md-4">
       <p class="mt-3 mb-2">
