--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 <div class="container pb-5">
   <div class="d-flex justify-content-center mt-5">
-    <a href="https://plantage-shop.com" target="_blank"><img src="img/monitor-image.png" class="img-fluid"></a>
+    <a href="https://plantage-shop.com" target="_blank"><img src="https://github.com/yharuko/lp2023/blob/main/monitor-image.png?raw=true" class="img-fluid"></a>
   </div>
 </div>
 
