--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
 <div class="container">
   <div class="d-flex justify-content-center">
-    <h1 class="shoplink mt-5">オンラインショップを是非ご覧ください<i class="fas fa-shopping-cart fa-fw"></i></h1>
+    <h1 class="shoplink mt-5">オンラインショップはこちら<i class="fas fa-shopping-cart fa-fw"></i></h1>
   </div>
 </div>
 
