--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
               <span class="navbar-toggler-icon"></span>
             </button>        
-          <div class="collapse navbar-collapse" id="Navber">
+<!--           <div class="collapse navbar-collapse" id="Navber">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
                 <a class="nav-link btn-warning text-white rounded" href="https://plantage-shop.com" target="_blank">オンラインショップ<span class="sr-only">(現位置)</span></a>
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="https://plantage-shop.com/collections/yakuzen-ingredients" target="_blank">薬膳食材</a>
               </li>
             </ul>
-          </div>
+          </div> -->
         </nav>        
     </div>
   </header>
