--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-<div class="container mt-5 mb-5">
+<!-- <div class="container mt-5 mb-5">
   <div class="d-flex justify-content-center">
     <div class="row">
       <div class="col-sm-12 col-md-12">
@@ -77,7 +77,22 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+  
+  <div class="container">
+  <div class="kodawari d-flex justify-content-center mt-5 mb-5 pt-2 pb-2">
+   <div>
+    <h1>PLANTAGEのこだわり</h1>
+     <p class="mt-3">
+     ・和漢植物と西洋ハーブの成分・機能性を熟慮して独自に配合。<br>
+     ・安全性の基準を満たした確かな品質の原料を使用。<br>
+     ・残留農薬検査、微生物検査、カフェイン検査等の様々な検査を実施し、常に安定した品質の製品をお届け。<br>
+     ・それぞれの植物の特性を活かし、相乗的に高め合うよう、ハーブの個性を引き出しながら調和を維持。<br>
+     ・香料、着色料、甘味料などの添加物は一切不使用。植物本来の味と香りをお楽しみください。
+     </p>
+   </div>
+  </div>
+ </div> 
 
 <!--
 <div class="container mt-sm-2 mt-md-2">
