--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
   </div>
 </div> -->
   
-  <div class="container">
+  <div class="k-background pt-4 pb-2">
+ <div class="container">
   <div class="kodawari d-flex justify-content-center mt-5 mb-5 pt-2 pb-2">
    <div>
     <h1>PLANTAGEのこだわり</h1>
@@ -94,6 +95,7 @@
    </div>
   </div>
  </div> 
+</div>
 
 <!--
 <div class="container mt-sm-2 mt-md-2">
