--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <a class="navbar-brand" href="#">
             <img src="https://github.com/yharuko/lp2023/blob/main/plantage_black.png?raw=true" class="img-fluid mt-3 mb-2 mr-5 ml-2">
           </a>
-            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
+<!--             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
               <span class="navbar-toggler-icon"></span>
-            </button>        
+            </button>         -->
           
 <!--           <div class="collapse navbar-collapse" id="Navber">
             <ul class="navbar-nav mr-auto">
