--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
-    <meta name="description" content="おいしくて飲みやすいハーブティーが人気。今話題の薬膳食材も豊富に揃っています♪" />
+    <meta name="description" content="美容と健康に。おいしくて飲みやすいハーブティーと薬膳茶でセルフメディケーション。漢方薬剤師が作ったオリジナル健康茶。" />
     <meta name="keywords" content="ハーブ,ハーブティー,薬膳茶,人気,おすすめ,おいしい,飲みやすい,薬膳料理,薬膳材料,薬膳食材,美容,痩せる,ダイエット,デトックス"/>
   </head>
 
